--- a/src/main/resources/templates/excelList.html
+++ b/src/main/resources/templates/excelList.html
@@ -140,6 +140,7 @@
         var y1 = 0;
         var y2 = 0;
         var mode = 'normal';
+        var isDrawComplete = false;
         const svg = d3.select(".canvas");
         var table1 = new Array();
         var table2 = new Array();
@@ -147,6 +148,17 @@
         var height2 = new Array();
         var html1 = '';
         var html2 = '';
+        (window.onload = function() {  // 화면이 뜬 뒤 처리
+
+              var obj1 = document.getElementById('sidebar-left');
+              var obj2 = document.getElementById('sidebar-right');
+              var obj3 = document.getElementById('draw');
+              var obj1_height = obj1.offsetHeight;
+              var obj2_height = obj2.offsetHeight;
+              var max = Math.max(obj1_height,obj2_height);
+
+              obj3.style.height = max + 'px';
+        })();
 
         <!-- 테이블 tr에 마우스 올려두었을 때 색 변경-->
         $( "#table1 tr, #table2 tr" ).on( "mouseover", function() {
@@ -164,22 +176,31 @@
             if(mode == 'auto'){
                 alert("초기화를 먼저 진행해주세요");
             }
+            else if(isDrawComplete == true){
+                alert("이미 매핑된 결과가 있습니다. 초기화 후 다시 시도해주세요.")
+            }
             else{
 
                 <!--현재 클릭된 Row(<tr>)-->
                 var tr = $(this);
-                var height = parseInt(tr.offset().top + tr.height() /2);
-                y1 = height;
-                if(!height1.includes(height)){
-                    height1.push(y1);
-                    table1 = getTableElement(tr , table1);
+                var td = tr.children();
+                if(td.eq(1).text() == '영문필드명'){
+                        alert("tr부분을 선택해주세요");
                 }
                 else{
-                    alert("이미 선택된 행 입니다.");
-                    y1 = 0;
+                    var height = parseInt(tr.offset().top + tr.height() /2);
+                    y1 = height;
+                    if(!height1.includes(height)){
+                        height1.push(y1);
+                        table1 = getTableElement(tr , table1);
+                    }
+                    else{
+                        alert("이미 선택된 행 입니다.");
+    <!--                    y1 = 0;-->
+                    }
+                    console.log(table1);
+                    $("#ex1_Result1").html(" * 클릭한 Row의 모든 데이터 = " + tr.text());
                 }
-                console.log(table1);
-                $("#ex1_Result1").html(" * 클릭한 Row의 모든 데이터 = " + tr.text());
             }
 
 		});
@@ -189,10 +210,18 @@
             if(mode == 'auto'){
                 alert("초기화를 먼저 진행해주세요");
             }
+            else if(isDrawComplete == true){
+                alert("이미 매핑된 결과가 있습니다. 초기화 후 다시 시도해주세요.")
+            }
             else{
-
                 <!--현재 클릭된 Row(<tr>)-->
                 var tr = $(this);
+                var td = tr.children();
+                if(td.eq(1).text() == '영문필드명'){
+                        alert("tr부분을 선택해주세요");
+                }
+                else{
+
                 var height = parseInt(tr.offset().top + tr.height() /2);
                 y2 = height;
                 if(!height2.includes(height)){
@@ -201,12 +230,12 @@
                 }
                 else{
                     alert("이미 선택된 행 입니다.");
-                    y2 = 0;
+<!--                    y2 = 0;-->
                 }
                  console.log(table2);
                  $("#ex1_Result2").html(" * 클릭한 Row의 모든 데이터 = " + tr.text());
+                }
             }
-
         });
 
         <!--  테이블 row의 데이터를 가져오는 함수      -->
@@ -242,8 +271,11 @@
             height2 = [];
             y1=0;
             y2=0;
+            isDrawComplete = false;
             console.log(table1);
             console.log(table2);
+            $("#ex1_Result1").html("");
+            $("#ex1_Result2").html("");
             $("#table3body").empty();
             $("#table4body").empty();
         }
@@ -258,6 +290,7 @@
                 height2 = [];
                 y1 = 0;
                 y2 = 0;
+
             }
             html1 = '';
             html2 = '';
@@ -409,14 +442,14 @@
                     console.log(table1Y+" "+ table2Y);
 
                     if(table1Y == 0 || table2Y ==0 ){
-                        alert("매핑실패 다시 매핑 해주세요.");
+                        alert("매핑실패! 초기화 후 다시 시도하세요.");
                         table1 = [];
                         table2 = [];
                         height1 = [];
                         height2 = [];
-                        d3.selectAll(".line").remove();
-                        $("#table3body").empty();
-                        $("#table4body").empty();
+<!--                        d3.selectAll(".line").remove();-->
+<!--                        $("#table3body").empty();-->
+<!--                        $("#table4body").empty();-->
                     }
                     else{
                         svg.append("line")
@@ -568,6 +601,8 @@
 
                 $("#table4body").empty();
                 $("#table4body").append(html2);
+                isDrawComplete = true;
                 }
+
             }
 </script>
